# daekey

./: Cargo.toml
.cargo/: config.toml
bindae/: Cargo.toml
libdae/: Cargo.toml
libdae/src/: api.rs  binder.rs  display_monitor.rs  input.rs  keys.rs  lib.rs  message.rs  modifiers.rs
scrdae/: Cargo.toml
scrdae/examples/: empty.rs  test_bindings.rs
