[package]
name = "libdae"
version = "0.1.0"
edition = "2024"

[dependencies]
postcard = { version = "1.0.0", features = ["use-std"] }
serde = { version = "1.0.*", features = ["derive"] }
evdev = { version = "0.13.*", features = ["serde"] }
nix = { version = "0.31", features = ["socket", "uio"] }
crossbeam = "0.8"
crossbeam-channel = "0.5"
rayon = "1.12"
smithay-client-toolkit = "0.20.0"
wayland-client = "0.31"
